==> PiotrSperka/ESP8266-WebRadio/STM32-Firmware/src/vs1003.c <==
#include "vs1053b-patches-flac.h"
#include "vs1003.h"

void VS1003_GPIO_conf(){
 	GPIO_InitTypeDef GPIO_InitStructure;


  	//RCC_APB1PeriphClockCmd(RCC_APB2Periph_SPI1,ENABLE);

  	//RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOC | RCC_APB2Periph_GPIOB| RCC_APB2Periph_GPIOA, ENABLE);

  	// SPI1 : SCK and MOSI
 	__GPIOA_CLK_ENABLE();
 	__GPIOB_CLK_ENABLE();
 	__GPIOC_CLK_ENABLE();
 	GPIO_InitStructure.Speed = GPIO_SPEED_FAST;
 	GPIO_InitStructure.Pull = GPIO_NOPULL;
 	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
 	GPIO_InitStructure.Alternate = 5;
 	GPIO_InitStructure.Pin = GPIO_PIN_5 | GPIO_PIN_6 | GPIO_PIN_7;
 	HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

 	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Alternate = 0;
	GPIO_InitStructure.Pin = CS_PIN;
	HAL_GPIO_Init(CS_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = XDCS_PIN;
	HAL_GPIO_Init(XDCS_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = XRESET_PIN;
	HAL_GPIO_Init(XRESET_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	GPIO_InitStructure.Pin = DREQ_PIN;
	HAL_GPIO_Init(DREQ_PORT, &GPIO_InitStructure);
//  	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7;
//  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
//  	GPIO_Init(GPIOA, &GPIO_InitStructure);
//
//  	GPIO_InitStructure.GPIO_Pin = CS_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  	GPIO_Init(CS_PORT, &GPIO_InitStructure);
//
//  	GPIO_InitStructure.GPIO_Pin = DREQ_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPD;
//  	GPIO_Init(DREQ_PORT, &GPIO_InitStructure);
//
//  	GPIO_InitStructure.GPIO_Pin = XDCS_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  	GPIO_Init(XDCS_PORT, &GPIO_InitStructure);
//
//  	GPIO_InitStructure.GPIO_Pin = XRESET_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  	GPIO_Init(XRESET_PORT, &GPIO_InitStructure);

}

void VS1003_SPI_conf(){
	SPI_InitTypeDef   SPI_InitStructure;

	__SPI1_CLK_ENABLE();
	SPI_InitStructure.Mode = SPI_MODE_MASTER;
	SPI_InitStructure.Direction = SPI_DIRECTION_2LINES;
	SPI_InitStructure.DataSize = SPI_DATASIZE_8BIT;
	SPI_InitStructure.CLKPolarity = SPI_POLARITY_LOW;
	SPI_InitStructure.CLKPhase = SPI_PHASE_1EDGE;
	SPI_InitStructure.NSS = SPI_NSS_SOFT;
	SPI_InitStructure.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_64;
	SPI_InitStructure.FirstBit = SPI_FIRSTBIT_MSB;
	SPI_InitStructure.CRCCalculation = SPI_CRCCALCULATION_DISABLED;
	SPI_InitStructure.CRCPolynomial = 7;
	SPI_InitStructure.TIMode = SPI_TIMODE_DISABLED; // ???

	SPI_Handle.Init = SPI_InitStructure;
	SPI_Handle.Instance = SPI1;

	HAL_SPI_Init(&SPI_Handle);

	__HAL_SPI_ENABLE(&SPI_Handle);

	//SPI1 configuration
//  	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
//  	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
//  	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
//
//  	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
//  	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
//
//  	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
//
//  	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_32;
//  	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
//  	SPI_InitStructure.SPI_CRCPolynomial = 7;
//  	SPI_Init(SPI1, &SPI_InitStructure);
//
//  	//Enabling SPI1
//  	SPI_Cmd(SPI1, ENABLE);
}

void ControlReset(uint8_t State){
	HAL_GPIO_WritePin(XRESET_PORT,XRESET_PIN,!State);
}

void SCI_ChipSelect(uint8_t State){
	HAL_GPIO_WritePin(CS_PORT,CS_PIN,!State);
}

void SDI_ChipSelect(uint8_t State){
	HAL_GPIO_WritePin(XDCS_PORT,XDCS_PIN,!State);
}

void VS1003_SineTest(){
	ControlReset(SET);
	ResetChip();
	Delay(1000);
	SPIPutChar(0xff);

	SCI_ChipSelect(RESET);
	SDI_ChipSelect(RESET);
	ControlReset(RESET);

	//ResetChip();
	Delay(500);

	WriteRegister(SPI_MODE,0x08,0x20);
	Delay(500);

	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);

	SDI_ChipSelect(SET);
	SPIPutChar(0x53);
	SPIPutChar(0xef);
	SPIPutChar(0x6e);
	SPIPutChar(0x03); //0x24
	SPIPutChar(0x00);
	SPIPutChar(0x00);
	SPIPutChar(0x00);
	SPIPutChar(0x00);
	Delay(1000);
	SDI_ChipSelect(RESET);

}

void WriteRegister(uint8_t addressbyte, uint8_t highbyte, uint8_t lowbyte)
{
	SDI_ChipSelect(RESET);
	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
	SCI_ChipSelect(SET);
	SPIPutChar(VS_WRITE_COMMAND);
	SPIPutChar(addressbyte);
	SPIPutChar(highbyte);
	SPIPutChar(lowbyte);
	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
	SCI_ChipSelect(RESET);
}

uint16_t ReadRegister(uint8_t addressbyte){
	uint16_t result;
	SDI_ChipSelect(RESET);
	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
	SCI_ChipSelect(SET);
	SPIPutChar(VS_READ_COMMAND);
	SPIPutChar(addressbyte);
	result = SPIPutChar(0) << 8;
	result |= SPIPutChar(0);
	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
	SCI_ChipSelect(RESET);
	return result;

}

void ResetChip(){
	ControlReset(SET); /// NIE DIZA LA???
	Delay(1000);
	SPIPutChar(0xff);
	SCI_ChipSelect(RESET);
	SDI_ChipSelect(RESET);
	ControlReset(RESET);
	Delay(100);

	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
	Delay(100);
}

void VS1003_Start(){
	//int i;
	/*ControlReset(SET);
	Delay(1000);
	SPIPutChar(0xFF);
	SCI_ChipSelect(RESET);
	SDI_ChipSelect(RESET);
	ControlReset(RESET);
	VS1003_SoftwareReset();
	Delay(1000);*/
	ResetChip();

	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);

	/*WriteRegister(SPI_MODE,0x08,0x00);
	WriteRegister(SPI_CLOCKF,0x98,0x00);
	WriteRegister(SPI_AUDATA,0xAC,0x45);
	WriteRegister(SPI_BASS,0x08,0x00);
	WriteRegister(SPI_VOL,0x0B,0x0B);
	WriteRegister(SPI_STATUS,0,0x33);*/
	//i=(SM_TESTS)|(SM_SDISHARE)|(SM_STREAM)|(SM_SDINEW);
	WriteRegister(SPI_CLOCKF,0x60,0x00);
	WriteRegister(0x00, 0x08, 0x02);

	while(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0);
}

int VS1003_SendMusicBytes(uint8_t* music,int quantity){
	if(HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0 || quantity < 1) return 0;
	//if(quantity > 32) quantity = 32;
	SDI_ChipSelect(SET);
	int o = 0;
	while(1)
	{
		int t = quantity;
		if(t > 32) t = 32;
		for (int k=o; k < o+t; k++)
		{
			SPIPutChar(music[k]);
		}
		o += t;
		quantity -= t;
		if(quantity == 0 || HAL_GPIO_ReadPin(DREQ_PORT,DREQ_PIN) == 0) break;
	}
	SDI_ChipSelect(RESET);
	return o;
}
